# mountain_recoder

./: .gitignore  README.md  db.sqlite3  pyproject.toml
app/: cli.py  settings.py  urls.py
app/app/: main.py
app/paplib/: apps.py  forms.py  serializers.py  urls.py  views.py
app/paplib/migrations/: 0002_climbrecord_updated_at.py
app/paplib/templates/paplib/: base.html  mountain_confirm_delete.html  register.html
mountain_recoder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
paplib/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
paplib/migrations/: 0001_initial.py  0003_climbrecord_image.py
paplib/templates/paplib/: base.html  mountain_detail.html  mountain_form.html  mountain_list.html  mypage.html  record_confirm_delete.html  record_form.html
paplib/templates/registration/: logged_out.html  login.html
